# BlueBox

./: .gitignore  .pyre_configuration  INSTALL.md  Makefile  PROJECT_SUMMARY.md  README.md  RELEASE.md  USAGE_GUIDE.md  pyproject.toml
.github/workflows/: ci.yml
bluebox/cli/: app.py
bluebox/core/: __init__.py  case_model.py  classification.py  doctor_service.py  finalize_service.py  init_service.py  solve_service.py  status_service.py  template_renderer.py  tools_catalog.py  tools_service.py  validation.py  workspace_builder.py
bluebox/prompts/: codex_solver_prompt.txt
bluebox/templates/case/: case.yaml
bluebox/templates/case/.codex/: prompt.txt
bluebox/templates/case/agent/: context.md  handoff.md  prompt.md
bluebox/templates/case/challenge/: manifest.json  source_ref.txt
bluebox/templates/case/memory/: log.md
bluebox/templates/case/meta/: artifacts_inventory.json  hashes.json  solution_state.json
bluebox/templates/case/notes/: writeup.md
bluehunt/cli/: app.py
docs/internal/: vnext_baseline_review.md  vnext_pr_merge_summary.md
examples/: README.md
examples/safe-demo/: NOTES.md
examples/safe-demo/artifacts/: dns.txt  network.txt
templates/case/.codex/: context.md
templates/case/meta/: evidence_summary.json
templates/case/notes/: changelog.md  findings.md  hypotheses.md  writeup_final.md
tests/: test_case_model.py  test_classification.py  test_cli.py  test_finalize.py  test_init_command.py  test_integration_workflow.py  test_solve.py  test_status_doctor.py  test_template_renderer.py  test_tools.py  test_validation.py
(+2 files in other folders)
