[project]
name = "bluebox"
version = "0.1.0"
description = "Terminal-based reproducible framework for blue team/DFIR CTF workflows"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "typer>=0.12.3",
  "pydantic>=2.8.2",
  "jinja2>=3.1.4",
  "pyyaml>=6.0.2",
  "rich>=13.7.1",
]

[project.scripts]
bluebox = "bluebox.cli.app:app"

[build-system]
requires = ["hatchling>=1.24.2"]
build-backend = "hatchling.build"
